# SuperSID_Project

./: .coverage  .dockerignore  .env.example  .gitignore  .prettierrc  API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  SETUP_DEVELOPMENT.md  docker-compose.yml  electron-builder.json  fix-imports.sh  jest.config.cjs  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs  test_config.py  tsconfig.backend.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.cjs  webpack.config.js
analysis/: comparisons.py  correlation_solar.py  correlation_weather.py  geo_maps.py  prediction.py  sid_statistics.py  spectrograms.py  utils.py
components/: Navbar.js
docs/: LICENSE.md  README_DEV.md  api.md  architecture.md  cli.md  dev_guide.md
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/pages/: comparisons.py  correlation.py  geomap.py  prediction.py  spectrogram.py  statistics.py
frontend/tests/: test_statistics.py
public/: index.html  manifest.json
src/: App.tsx  setupTests.ts
src/backend/: server.ts
supersid_next.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: example_analysis.ipynb  features.py  test_api_server.py  test_api_server_extra.py  test_api_server_extra2.py  test_audio_source.py  test_cli.py  test_cli_integration.py  test_config_loader.py  test_events.py  test_features.py  test_filters.py  test_utils.py  test_writer.py
ui/: index.html  package-lock.json  package.json
(+100 files in other folders)
