[project]
name = "supersid-next"
version = "0.1.0"
description = "Next-generation SuperSID platform: acquisition, DSP, API, and UI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Alejandro Arévalo" }
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "numpy>=2.1",
  "scipy>=1.12",
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "pyarrow>=16.0",
  "duckdb>=1.0",
  "websockets>=12.0",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.11",
  "ruff>=0.6",
  "bandit>=1.7",
  "pre-commit>=3.8",
  "httpx>=0.27"
]

[tool.setuptools]
packages = ["supersid"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","W","F","I","B","C","Q","S"]
ignore = ["E501", "C901"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=supersid --cov-report=term-missing"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
